# stack-hpc-coveralls

./: USAGE.txt  stack-hpc-coveralls.cabal  stack.yaml
app/: Main.hs
src/SHC/: Api.hs  Coverage.hs  Stack.hs  Types.hs  Utils.hs
