name:                stack-hpc-coveralls
version:             0.0.4.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rubik/stack-hpc-coveralls
license:             ISC
license-file:        LICENSE
author:              Michele Lacchia
maintainer:          michelelacchia@gmail.com
copyright:           Copyright (c) 2015 Michele Lacchia
category:            Control
build-type:          Simple
extra-source-files:
    stack.yaml
    USAGE.txt
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     SHC.Coverage
                       SHC.Types
                       SHC.Utils
                       SHC.Lix
                       SHC.Api
                       SHC.Stack
  build-depends:       base                 >=4.7  && <5
                     , hpc
                     , directory
                     , filepath
                     , process
                     , pureMD5
                     , containers
                     , aeson
                     , bytestring
                     , unordered-containers
                     , utf8-string
                     , text
                     , wreq
                     , http-client
                     , lens
                     , lens-aeson
                     , yaml
  default-language:    Haskell2010

executable shc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base       >=4.7 && <5
                     , aeson
                     , bytestring
                     , docopt
                     , split
                     , stack-hpc-coveralls -any
  default-language:    Haskell2010

test-suite shc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SHCSpec
                       SHCHUnits
  build-depends:       base                >=4.7 && <5
                     , stack-hpc-coveralls -any
                     , hspec
                     , hspec-contrib
                     , HUnit
                     , hpc
                     , containers
                     , deepseq
                     , aeson
                     , time
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite style
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base  >=4.7 && <5
                     , hlint
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/rubik/stack-hpc-coveralls
